src/tests/testfiles/variable-declarations/12.txt
testfiles/variable-declarations/12.c:2:7: error: incompatible types when initializing type 'char * []' using type 'char []'
char *str[] = "hello i am string";
     ^
testfiles/variable-declarations/12.c:3:7: error: incompatible types when initializing type 'char * []' using type 'char []'
char *str2[] = "hello i am string";
     ^
